@@ -1,14 +1,11 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form>
+<form cursor="number_of_use">
     <label name="promotion"/>
     <field name="promotion"/>
     <label name="company"/>
     <field name="company"/>
-
-    <label name="name"/>
-    <field name="name" colspan="3"/>
 
     <label name="number_of_use"/>
     <field name="number_of_use"/>
