@@ -1,3 +1,4 @@
+* Remove name on coupon
 
 Version 7.4.0 - 2024-11-04
 --------------------------
